--- a/app.json
+++ b/app.json
@@ -18,7 +18,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ch1105.PasswordManager"
     },
     "web": {
       "favicon": "./assets/favicon.png"
