--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-crypto": "~13.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-secure-store": "~13.0.2",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
